--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,13 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <!-- Main blue color -->
+    <color name="main_color">#246BFD</color>
+    <!-- Main blue color -->
+
+    <!-- gray color -->
+    <color name="gray">#828282</color>
+    <!-- gray color -->
+
 </resources>
