Completed binding resources to reset password layout

--- a/app/src/main/res/layout/fragment_forget_password.xml
+++ b/app/src/main/res/layout/fragment_forget_password.xml
@@ -20,10 +20,11 @@
         android:id="@+id/tv_reset_password_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="@dimen/spacing_normal"
+        android:fontFamily="@font/poppins_bold"
         android:text="@string/reset_password"
         android:textColor="#000000"
-        android:textSize="20sp"
+        android:textSize="@dimen/reset_password_font_size_large"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/img_back_arrow"
         app:layout_constraintStart_toEndOf="@+id/img_back_arrow"
@@ -33,7 +34,7 @@
         android:id="@+id/img_reset_password"
         android:layout_width="0dp"
         android:layout_height="200dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="@dimen/spacing_large"
         android:src="@drawable/forget_password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -43,14 +44,15 @@
         android:id="@+id/tv_contacts_description"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="16dp"
-        android:paddingStart="16dp"
-        android:paddingEnd="16dp"
+        android:layout_marginStart="@dimen/spacing_normal"
+        android:layout_marginTop="@dimen/spacing_large"
+        android:layout_marginEnd="@dimen/spacing_normal"
+        android:fontFamily="@font/poppins_regular"
+        android:paddingStart="@dimen/spacing_normal"
+        android:paddingEnd="@dimen/spacing_normal"
         android:text="@string/select_which_contact_details_should_we_use_to_reset_your_password"
-        android:textColor="#323232"
-        android:textSize="20sp"
+        android:textColor="@color/black"
+        android:textSize="@dimen/reset_password_font_size_large"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/img_reset_password" />
@@ -59,7 +61,7 @@
         android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:layout_margin="16dp"
+        android:layout_margin="@dimen/spacing_normal"
         app:cardCornerRadius="15dp"
         app:cardElevation="3dp"
         app:cardUseCompatPadding="true"
@@ -85,9 +87,12 @@
                 android:id="@+id/tv_via_sms"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginStart="@dimen/spacing_normal"
+                android:layout_marginTop="@dimen/spacing_small"
+                android:fontFamily="@font/poppins_regular"
                 android:text="@string/via_sms"
+                android:textColor="@color/gray"
+                android:textSize="@dimen/reset_password_font_size_normal"
                 app:layout_constraintStart_toEndOf="@+id/img_message"
                 app:layout_constraintTop_toTopOf="@+id/img_message" />
 
@@ -95,10 +100,12 @@
                 android:id="@+id/tv_phone_number"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="@dimen/spacing_small"
+                android:fontFamily="@font/poppins_bold"
                 android:text="+0110 ****81"
-                android:textColor="#070606"
+                android:textColor="@color/black"
                 android:textStyle="bold"
+                android:textSize="@dimen/reset_password_font_size_small"
                 app:layout_constraintStart_toStartOf="@+id/tv_via_sms"
                 app:layout_constraintTop_toBottomOf="@+id/tv_via_sms" />
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -108,7 +115,7 @@
         android:id="@+id/cardView2"
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:layout_margin="16dp"
+        android:layout_margin="@dimen/spacing_normal"
         app:cardCornerRadius="15dp"
         app:cardElevation="3dp"
         app:cardUseCompatPadding="true"
@@ -134,9 +141,12 @@
                 android:id="@+id/tv_via_email"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginStart="@dimen/spacing_normal"
+                android:layout_marginTop="@dimen/spacing_small"
+                android:fontFamily="@font/poppins_regular"
                 android:text="@string/via_email"
+                android:textColor="@color/gray"
+                android:textSize="@dimen/reset_password_font_size_normal"
                 app:layout_constraintStart_toEndOf="@+id/img_mail"
                 app:layout_constraintTop_toTopOf="@+id/img_mail" />
 
@@ -144,10 +154,12 @@
                 android:id="@+id/tv_email"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="@dimen/spacing_small"
+                android:fontFamily="@font/poppins_bold"
                 android:text="ma****@gmail.com"
-                android:textColor="#070606"
+                android:textColor="@color/black"
                 android:textStyle="bold"
+                android:textSize="@dimen/reset_password_font_size_normal"
                 app:layout_constraintStart_toStartOf="@+id/tv_via_email"
                 app:layout_constraintTop_toBottomOf="@+id/tv_via_email" />
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -159,10 +171,11 @@
         android:layout_height="65dp"
         android:layout_margin="20dp"
         android:backgroundTint="#246BFD"
+        android:fontFamily="@font/poppins_bold"
         android:text="@string/Continue"
         android:textAllCaps="false"
-        android:textColor="#FAFAFA"
-        android:textSize="16sp"
+        android:textColor="@color/white"
+        android:textSize="@dimen/reset_password_font_size_normal"
         app:cornerRadius="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
