--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,5 +13,10 @@
     <dimen name="sign_in_text_size_normal">12sp</dimen>
     <!-- text size for sign in screen -->
 
+    <!-- text size for reset password screen -->
+    <dimen name="reset_password_font_size_small">14sp</dimen>
+    <dimen name="reset_password_font_size_normal">16sp</dimen>
+    <dimen name="reset_password_font_size_large">18sp</dimen>
+    <!-- text size for reset password screen -->
 
 </resources>
