--- a/app/src/main/res/layout/fragment_forget_password.xml
+++ b/app/src/main/res/layout/fragment_forget_password.xml
@@ -1,185 +1,187 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ForgetPasswordFragment">
+    tools:context=".ForgetPasswordFragment"
+    android:fillViewport="true">
 
-    <ImageView
-        android:id="@+id/img_back_arrow"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="24dp"
-        android:src="@drawable/arrow_back_24"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/tv_reset_password_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/spacing_normal"
-        android:fontFamily="@font/poppins_bold"
-        android:text="@string/reset_password"
-        android:textColor="#000000"
-        android:textSize="@dimen/reset_password_font_size_large"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/img_back_arrow"
-        app:layout_constraintStart_toEndOf="@+id/img_back_arrow"
-        app:layout_constraintTop_toTopOf="@+id/img_back_arrow" />
-
-    <ImageView
-        android:id="@+id/img_reset_password"
-        android:layout_width="0dp"
-        android:layout_height="200dp"
-        android:layout_marginTop="@dimen/spacing_large"
-        android:src="@drawable/forget_password"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_reset_password_title" />
-
-    <TextView
-        android:id="@+id/tv_contacts_description"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/spacing_normal"
-        android:layout_marginTop="@dimen/spacing_large"
-        android:layout_marginEnd="@dimen/spacing_normal"
-        android:fontFamily="@font/poppins_medium"
-        android:paddingStart="@dimen/spacing_normal"
-        android:paddingEnd="@dimen/spacing_normal"
-        android:text="@string/select_which_contact_details_should_we_use_to_reset_your_password"
-        android:textColor="@color/black"
-        android:textSize="@dimen/reset_password_font_size_large"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/img_reset_password" />
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardView"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_margin="@dimen/spacing_normal"
-        app:cardCornerRadius="15dp"
-        app:cardElevation="3dp"
-        app:cardUseCompatPadding="true"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_contacts_description">
+        android:layout_height="match_parent"
+        tools:context=".ForgetPasswordFragment">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <ImageView
+            android:id="@+id/img_back_arrow"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="24dp"
+            android:src="@drawable/arrow_back_24"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/tv_reset_password_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/spacing_normal"
+            android:fontFamily="@font/poppins_bold"
+            android:text="@string/reset_password"
+            android:textColor="#000000"
+            android:textSize="@dimen/reset_password_font_size_large"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="@+id/img_back_arrow"
+            app:layout_constraintStart_toEndOf="@+id/img_back_arrow"
+            app:layout_constraintTop_toTopOf="@+id/img_back_arrow" />
+
+        <ImageView
+            android:id="@+id/img_reset_password"
+            android:layout_width="0dp"
+            android:layout_height="200dp"
+            android:layout_marginTop="@dimen/spacing_large"
+            android:src="@drawable/reset_password"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_reset_password_title" />
+
+        <TextView
+            android:id="@+id/tv_contacts_description"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/spacing_normal"
+            android:layout_marginTop="@dimen/spacing_large"
+            android:layout_marginEnd="@dimen/spacing_normal"
+            android:fontFamily="@font/poppins_medium"
+            android:paddingStart="@dimen/spacing_normal"
+            android:paddingEnd="@dimen/spacing_normal"
+            android:text="@string/select_which_contact_details_should_we_use_to_reset_your_password"
+            android:textColor="@color/black"
+            android:textSize="@dimen/reset_password_font_size_large"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/img_reset_password" />
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="100dp"
+            android:layout_margin="@dimen/spacing_normal"
+            app:cardCornerRadius="15dp"
+            app:cardElevation="3dp"
+            app:cardUseCompatPadding="true"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_contacts_description">
 
-            <ImageView
-                android:id="@+id/img_message"
-                android:layout_width="50dp"
-                android:layout_height="0dp"
-                android:layout_marginStart="24dp"
-                android:src="@drawable/messages"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/tv_via_sms"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/spacing_normal"
-                android:layout_marginTop="@dimen/spacing_small"
-                android:fontFamily="@font/poppins_regular"
-                android:text="@string/via_sms"
-                android:textColor="@color/gray"
-                android:textSize="@dimen/reset_password_font_size_normal"
-                app:layout_constraintStart_toEndOf="@+id/img_message"
-                app:layout_constraintTop_toTopOf="@+id/img_message" />
+                <ImageView
+                    android:id="@+id/img_message"
+                    android:layout_width="50dp"
+                    android:layout_height="0dp"
+                    android:layout_marginStart="24dp"
+                    android:src="@drawable/messages"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
-                android:id="@+id/tv_phone_number"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/spacing_small"
-                android:fontFamily="@font/poppins_bold"
-                android:text="+0110 ****81"
-                android:textColor="@color/black"
-                android:textStyle="bold"
-                android:textSize="@dimen/reset_password_font_size_small"
-                app:layout_constraintStart_toStartOf="@+id/tv_via_sms"
-                app:layout_constraintTop_toBottomOf="@+id/tv_via_sms" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.cardview.widget.CardView>
+                <TextView
+                    android:id="@+id/tv_via_sms"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/spacing_normal"
+                    android:layout_marginTop="@dimen/spacing_small"
+                    android:fontFamily="@font/poppins_regular"
+                    android:text="@string/via_sms"
+                    android:textColor="@color/gray"
+                    android:textSize="@dimen/reset_password_font_size_normal"
+                    app:layout_constraintStart_toEndOf="@+id/img_message"
+                    app:layout_constraintTop_toTopOf="@+id/img_message" />
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardView2"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_margin="@dimen/spacing_normal"
-        app:cardCornerRadius="15dp"
-        app:cardElevation="3dp"
-        app:cardUseCompatPadding="true"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView">
+                <TextView
+                    android:id="@+id/tv_phone_number"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/spacing_small"
+                    android:fontFamily="@font/poppins_bold"
+                    android:text="+0110 ****81"
+                    android:textColor="@color/black"
+                    android:textStyle="bold"
+                    android:textSize="@dimen/reset_password_font_size_small"
+                    app:layout_constraintStart_toStartOf="@+id/tv_via_sms"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_via_sms" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.cardview.widget.CardView>
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardView2"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="100dp"
+            android:layout_margin="@dimen/spacing_normal"
+            app:cardCornerRadius="15dp"
+            app:cardElevation="3dp"
+            app:cardUseCompatPadding="true"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/cardView">
 
-            <ImageView
-                android:id="@+id/img_mail"
-                android:layout_width="50dp"
-                android:layout_height="0dp"
-                android:layout_marginStart="24dp"
-                android:src="@drawable/mail"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/tv_via_email"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/spacing_normal"
-                android:layout_marginTop="@dimen/spacing_small"
-                android:fontFamily="@font/poppins_regular"
-                android:text="@string/via_email"
-                android:textColor="@color/gray"
-                android:textSize="@dimen/reset_password_font_size_normal"
-                app:layout_constraintStart_toEndOf="@+id/img_mail"
-                app:layout_constraintTop_toTopOf="@+id/img_mail" />
+                <ImageView
+                    android:id="@+id/img_mail"
+                    android:layout_width="50dp"
+                    android:layout_height="0dp"
+                    android:layout_marginStart="24dp"
+                    android:src="@drawable/mail"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
-                android:id="@+id/tv_email"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/spacing_small"
-                android:fontFamily="@font/poppins_bold"
-                android:text="ma****@gmail.com"
-                android:textColor="@color/black"
-                android:textStyle="bold"
-                android:textSize="@dimen/reset_password_font_size_normal"
-                app:layout_constraintStart_toStartOf="@+id/tv_via_email"
-                app:layout_constraintTop_toBottomOf="@+id/tv_via_email" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.cardview.widget.CardView>
+                <TextView
+                    android:id="@+id/tv_via_email"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/spacing_normal"
+                    android:layout_marginTop="@dimen/spacing_small"
+                    android:fontFamily="@font/poppins_regular"
+                    android:text="@string/via_email"
+                    android:textColor="@color/gray"
+                    android:textSize="@dimen/reset_password_font_size_normal"
+                    app:layout_constraintStart_toEndOf="@+id/img_mail"
+                    app:layout_constraintTop_toTopOf="@+id/img_mail" />
 
-    <Button
-        android:id="@+id/btn_continue"
-        android:layout_width="0dp"
-        android:layout_height="65dp"
-        android:layout_margin="20dp"
-        android:backgroundTint="#246BFD"
-        android:fontFamily="@font/poppins_bold"
-        android:text="@string/Continue"
-        android:textAllCaps="false"
-        android:textColor="@color/white"
-        android:textSize="@dimen/reset_password_font_size_normal"
-        app:cornerRadius="10dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView2" />
+                <TextView
+                    android:id="@+id/tv_email"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/spacing_small"
+                    android:fontFamily="@font/poppins_bold"
+                    android:text="ma****@gmail.com"
+                    android:textColor="@color/black"
+                    android:textStyle="bold"
+                    android:textSize="@dimen/reset_password_font_size_normal"
+                    app:layout_constraintStart_toStartOf="@+id/tv_via_email"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_via_email" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.cardview.widget.CardView>
+
+        <Button
+            android:id="@+id/btn_continue"
+            style="@style/button_main_style"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:text="@string/Continue"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/cardView2" />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</ScrollView>
