Created sign up patient layout

--- a/app/src/main/res/layout/fragment_otp_verification.xml
+++ b/app/src/main/res/layout/fragment_otp_verification.xml
@@ -28,6 +28,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
+            android:fontFamily="@font/poppins_bold"
             android:text="@string/otp_code_verification"
             android:textColor="@color/black"
             android:textSize="18sp"
@@ -49,6 +50,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
+            android:fontFamily="@font/poppins_medium"
             android:text="@string/code_has_been_send_to"
             android:textColor="@color/black"
             android:textSize="16sp"
@@ -130,6 +132,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="60dp"
+            android:fontFamily="@font/poppins_regular"
             android:text="@string/resend_code_in"
             app:layout_constraintEnd_toStartOf="@+id/tv_seconds"
             app:layout_constraintHorizontal_bias="0.5"
@@ -141,6 +144,7 @@
             android:id="@+id/tv_seconds"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/poppins_regular"
             android:textColor="@color/main_color"
             app:layout_constraintBottom_toBottomOf="@+id/tv_resend_code"
             app:layout_constraintEnd_toEndOf="parent"
