--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,6 +4,7 @@
     <!-- Constraints -->
     <dimen name="spacing_small">8dp</dimen>
     <dimen name="spacing_normal">16dp</dimen>
+    <dimen name="spacing_medium">18dp</dimen>
     <dimen name="spacing_large">32dp</dimen>
     <!-- Constraints -->
 
