--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,4 +10,12 @@
         <item name="android:textAllCaps">false</item>
         <item name="android:textSize">@dimen/sign_in_text_size_large</item>
     </style>
+
+    <!-- Radio button style -->
+    <style name="RadioButton" parent="Theme.AppCompat.Light">
+        <item name="colorAccent">@color/main_color</item>
+        <item name="android:textColorSecondary">@color/black</item>
+        <item name="colorControlNormal">@color/gray</item>
+    </style>
+    <!-- Radio button style -->
 </resources>
