--- a/app/src/main/res/layout/fragment_sign_up_doctor.xml
+++ b/app/src/main/res/layout/fragment_sign_up_doctor.xml
@@ -8,7 +8,6 @@
     tools:context=".SignUpDoctorFragment">
 
 
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -20,10 +19,10 @@
             android:layout_height="48dp"
             android:layout_marginStart="@dimen/spacing_normal"
             android:layout_marginTop="@dimen/spacing_normal"
-            android:src="@drawable/back_arrow_ic"
+            android:background="@drawable/image_button_round_corner"
             android:elevation="8dp"
             android:padding="10dp"
-            android:background="@drawable/image_button_round_corner"
+            android:src="@drawable/back_arrow_ic"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -43,7 +42,7 @@
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/spacing_small"
             android:src="@drawable/doctor_register"
@@ -56,12 +55,9 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/spacing_normal"
-            android:layout_marginTop="16dp"
             android:layout_marginEnd="@dimen/spacing_normal"
-            android:layout_marginBottom="80dp"
-            android:elevation="20dp"
             app:cardCornerRadius="20dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:cardElevation="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView">
@@ -244,7 +240,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/spacing_normal"
-                    android:layout_marginTop="@dimen/spacing_small"
+                    android:layout_marginTop="8dp"
                     android:layout_marginEnd="@dimen/spacing_normal"
                     app:boxStrokeColor="@color/main_color"
                     app:hintEnabled="false"
